# kube-hunter-plugins

./: README.md
.github/workflows/: publish.yml
hunting/arp_spoof_hunter/: arp_entrypoint.py  kube_hunter_arp_spoof.py  requirements.txt  setup.cfg  setup.py
hunting/dns_spoof_hunter/: dns_entrypoint.py  kube_hunter_dns_spoof.py  setup.cfg  setup.py
