[metadata]
name = kube-hunter
description = kube-hunter plugin for dns spoofing
author = Aqua Security
author_email = support@aquasec.com
url = https://github.com/aquasecurity/kube-hunter-plugins
keywords =
    aquasec
    hunter
    kubernetes
    k8s
    security
    dns
    spoofing
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Security